# buffer-pool

./: Cargo.toml  README.md
benches/: iter-and-resize.rs  ownership-of-region.rs  set-vec-to-default.rs  vec-of-vec-vs-pool.rs
examples/: sum-vector.rs
src/: lib.rs
