[package]
name = "buffer-pool"
version = "0.1.0"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2018"
license = "MIT"
description = "A vector of vectors backed by one contiguous vector - allows mutable borrows of non-overlapping regions."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
