[package]
name = "bufferpool"
version = "0.1.5"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2018"
license = "MIT"
description = "A vector of vectors backed by one contiguous vector - allows mutable borrows of non-overlapping regions."
repository = "https://github.com/bennetthardwick/buffer-pool"
readme = "README.md"
categories = [ "algorithms", "data-structures" ]
keywords = [ "vector", "buffer" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[badges]
travis-ci = { repository = "https://github.com/bennetthardwick/buffer-pool" }
